# ci

./: .travis.yml  README.md
cmake/: ConfigureLibrary.cmake  FindPackages.cmake  SetCMakeEnvironment.cmake
dir/exe/: CTestTestfile.cmake  Makefile  cmake_install.cmake
docs/: ci.puml
exe/: CMakeLists.txt  H4_test.xyz  H4_test_fci.output  doci_fno_main.cpp  doci_rhf_10-3_50000_main.cpp  doci_rhf_main.cpp  expansion_dms.cpp  fci_lowdin_main.cpp  fci_main.cpp  fci_rhf_main.cpp  main.cpp  oo_doci_main_fno.cpp  oo_doci_main_rhf.cpp  oo_doci_rhf_10-3_50000_main.cpp  oo_doci_rhf_main.cpp
include/: BaseCI.hpp  DOCI.hpp  FCI.hpp  ONVExpansion.hpp  ONVExpansionComponent.hpp  ci.hpp
src/: BaseCI.cpp  DOCI.cpp  FCI.cpp
tb/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tb/exe/: CTestTestfile.cmake  Makefile
tb/src/: Makefile  cmake_install.cmake
tb/tests/: CTestTestfile.cmake  Makefile
tb2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tb2/exe/: CTestTestfile.cmake  Makefile
tb2/src/: Makefile  cmake_install.cmake
tb2/tests/: CTestTestfile.cmake  (+2 more)
tests/: DOCI_Davidson_test.cpp  DOCI_OO_test.cpp  DOCI_RDM_test.cpp  DOCI_dense_test.cpp  DOCI_orbital_optimization_test.cpp  DOCI_sparse_test.cpp  FCI_Davidson_test.cpp  FCI_RDM_test.cpp  FCI_dense_test.cpp  FCI_sparse_test.cpp  ONVExpansionComponent_dynamic_bitset_test.cpp  ONVExpansionComponent_test.cpp  ONVExpansionComponent_unsigned_test.cpp  ONVExpansion_dynamic_bitset_test.cpp  ONVExpansion_test.cpp  ONVExpansion_unsigned_test.cpp  beh2.xyz  h4.xyz  h4_test.xyz
(+3 files in other folders)
